deploy-assembly-ingress/deployment-definition.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assembly-deployment
  namespace: assembly-ingress
  labels:
    app: assembly-webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: assembly-webapp
  template:
    metadata:
      name: assembly-webapp-pod
      labels:
        app: assembly-webapp
    spec:
      containers:
      - name: assembly-webapp
        image: harbor.flexlab.local/jmnicolescu/assembly-webapp:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: assembly-service
  namespace: assembly-ingress
  labels:
    app: assembly-webapp
spec:
  type: ClusterIP
  selector:
    app: assembly-webapp
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: assembly-webapp-ingress
  namespace: assembly-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # ingress.kubernetes.io/ssl-passthrough: "true"
    # nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
      - assembly-webapp.flexlab.local
      secretName: assembly-webapp-tls
  rules:
  - host: assembly-webapp.flexlab.local
    http:
      paths:
      - path: /
        backend:
          serviceName: assembly-service
          servicePort: 8080
